--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -6,7 +6,7 @@
     position: absolute;
     bottom: 0;
     right: 0;
-    background: $secondary;
+    background: none;
 
     .wrap {
         height: auto;
