--- a/style.css
+++ b/style.css
@@ -1627,6 +1627,13 @@ body {
   padding: 0;
   margin-top: -80px; }
 
+@media (max-width: 1024px) {
+  .site-inner, .wrap {
+    max-width: 920px; } }
+@media (max-width: 960px) {
+  .site-inner, .wrap {
+    max-width: 800px; } }
+
 .page-template-page_home .site-inner, .no-mini-hero .site-inner {
   margin-top: 0; }
 
@@ -1890,23 +1897,9 @@ a.alignright, img.alignright, .wp-caption.alignright {
   position: absolute;
   bottom: 0;
   right: 0;
-  background: #201c1d; }
+  background: none; }
   .nav-primary .wrap {
     height: auto; }
-  .nav-primary .mobile-toggle {
-    display: none;
-    height: 50px;
-    width: 50px;
-    text-align: right;
-    -webkit-transition: all ease-in-out 200ms;
-    transition: all ease-in-out 200ms; }
-    .nav-primary .mobile-toggle:hover {
-      color: #8dc63f;
-      cursor: pointer; }
-    .nav-primary .mobile-toggle .dashicons {
-      width: 50px;
-      height: 50px;
-      font-size: 42px; }
   .nav-primary .genesis-nav-menu li > a {
     padding: 10px 18px 20px 18px;
     color: #edeeee;
